--- a/settings.json
+++ b/settings.json
@@ -1,9 +1,10 @@
 {
-    "name": "fml",
-    "blocks": {
-        "/blockchain/solana": true,
-        "/blockchain/solana/rust": true,
-        "/framework/react": true,
-        "/category/examples/core-hello_dev": true
-    }
+	"name": "fml",
+	"blocks": {
+		"/blockchain/solana": true,
+		"/blockchain/solana/rust": true,
+		"/framework/react": true,
+		"/category/examples/core-hello_dev": true,
+		"/category/examples/solVows": true
+	}
 }
