--- a/packages/dapplib/manifest.json
+++ b/packages/dapplib/manifest.json
@@ -1,14 +1,19 @@
 {
-    "repository": {},
-    "__outputFolder": null,
-    "blocks": [
-        {
-            "category": "examples",
-            "name": "core-hello_dev",
-            "parameters": {}
-        }
-    ],
-    "blockchain": "solana",
-    "language": "rust",
-    "framework": "react"
+	"repository": {},
+	"__outputFolder": null,
+	"blocks": [
+		{
+			"category": "examples",
+			"name": "core-hello_dev",
+			"parameters": {}
+		},
+		{
+			"category": "examples",
+			"name": "solVows",
+			"parameters": {}
+		}
+	],
+	"blockchain": "solana",
+	"language": "rust",
+	"framework": "react"
 }
